--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@
 /yarn-error.log
 
 .byebug_history
-/coverage
+/coverage/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
