--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "dirty-laundry-team1-2019",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.4.9",
+    "tailwindcss": "^0.7.4",
+    "webpack-dev-server": "2.11.2"
+  }
 }
