--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "dirty-laundry-team1-2019",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "tailwindcss": "^0.7.4"
+  }
 }
