--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dirty-laundry-team1-2019",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "3.5",
     "tailwindcss": "^0.7.4"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
