--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,4 +1,6 @@
 {
-  "application.js": "/packs/application-f3d5f9685d71efd150e0.js",
-  "application.js.map": "/packs/application-f3d5f9685d71efd150e0.js.map"
+  "application.css": "/packs/application-509b70e22149383b29496e2da1bef088.css",
+  "application.css.map": "/packs/application-509b70e22149383b29496e2da1bef088.css.map",
+  "application.js": "/packs/application-fdd54c2c854eb3ca9484.js",
+  "application.js.map": "/packs/application-fdd54c2c854eb3ca9484.js.map"
 }
